# ProiectM2S

./: Makefile  Makefile.in  README.md  READMEDarius.md  command.sh  config.ini  config.status  configure.ac  configure~  libtool  report.txt  report_genetic.txt  results.csv
GeneticAlgorithm/: index.py
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
fpspec2000/: applu.bat  apsi.bat  equake.bat  galgel.bat  lucas.bat  mesa.bat  mgrid.bat
output/: formatter.sh  output_blackscholes.txt  output_bodytrack.txt  output_canneal.txt  output_dedup.txt  output_facesim.txt  output_ferret.txt  output_fluidanimate.txt  output_streamcluster.txt  output_swaptions.txt  output_vips.txt  results.csv
runtime/: Makefile  Makefile.in
runtime/cuda/: Makefile  Makefile.in
runtime/hsa/: Makefile  Makefile.in
runtime/include/: Makefile  Makefile.in
runtime/opencl/: Makefile  Makefile.in
src/: Makefile  Makefile.in  documentatie.txt  m2s.cc
src/.deps/: m2s.Po
src/arch/x86/timing/: Alu.cc  Alu.h  BranchPredictor.cc  BranchPredictor.h  GeneticValuePredictor.cc  GeneticValuePredictor.h  Makefile  Makefile.am  Makefile.in  Predictor.cc  Predictor.h  ValuePredictor.cc  ValuePredictor.h
src/arch/x86/timing/.deps/: Alu.Po  BranchPredictor.Po  Core.Po  Cpu.Po  CpuScheduler.Po  FunctionalUnit.Po  GeneticValuePredictor.Po  Predictor.Po  RegisterFile.Po  Thread.Po  ThreadCommit.Po  ThreadDecode.Po  ThreadDispatch.Po  ThreadFetch.Po  ThreadIssue.Po  ThreadRecover.Po  ThreadScheduler.Po  Timing.Po  TraceCache.Po  Uop.Po  ValuePredictor.Po
tests/: Makefile  Makefile.in
(+358 files in other folders)
