lib_LIBRARIES = libtiming.a

libtiming_a_SOURCES = \
	Alu.cc \
	BranchPredictor.cc \
	Core.cc \
	Cpu.cc \
	CpuScheduler.cc \
	FunctionalUnit.cc \
	Predictor.cc \
	RegisterFile.cc \
	Thread.cc \
	ThreadCommit.cc \
	ThreadDecode.cc \
	ThreadDispatch.cc \
	ThreadFetch.cc \
	ThreadIssue.cc \
	ThreadRecover.cc \
	ThreadScheduler.cc \
	Timing.cc \
	TraceCache.cc \
	Uop.cc \
	ValuePredictor.cc \
	GeneticValuePredictor.cc \
	\
	Alu.h \
	BranchPredictor.h \
	Core.h \
	Cpu.h \
	FunctionalUnit.h \
	Predictor.h \
	RegisterFile.h \
	Thread.h \
	Timing.h \
	TraceCache.h \
	Uop.h \
	ValuePredictor.h \
	GeneticValuePredictor.h

AM_CPPFLAGS = @M2S_INCLUDES@

